<resources>
    <string name="app_name">בא לי מלאי</string>
    <string name="forgot_password_name">שכחתי סיסמה</string>
    <string name="prompt_email">אימייל</string>
    <string name="prompt_password">סיסמה</string>
    <string name="Bar_code">קוד מוצר</string>
    <string name="Product_Name">שם מוצר</string>
    <string name="ManagerText">מנהל</string>
    <string name="Amount">כמות/משקל</string>
    <string name="Sale_Price">מחיר מכירה</string>
    <string name="action_sign_in">התחברות</string>
    <string name="Add_Product">הוסף פריט</string>
    <string name="Add_Worker">הוסף עובד</string>
    <string name="Worker_name">שם העובד</string>
    <string name="Remove_Worker">הסרה</string>
    <string name="FirstName">שם פרטי</string>
    <string name="LastName">שם משפחה</string>
    <string name="AutoInc">מספור אוטומטי</string>
    <string name="DateChange">תאריך שינוי:</string>
    <string name="DeleteInv">איפוס מלאי</string>
    <string name="Inventory">מלאי</string>
    <string name="Reports">דוחות</string>
    <string name="PercentagesAdd">עדכן אחוזי עבודה</string>
    <string name="ForgotPass">שכחתי סיסמה</string>
    <string name="FinishCount">סיום ספירה</string>
    <string name="InvenCounts">ספירות מלאי</string>
    <string name="Export_report">ייצוא דוח Excel</string>
    <string name="NonUpdated_products">הצג מוצרים שלא עודכנו</string>
    <string name="ResetPass">שלח לי מייל לאיפוס סיסמה</string>
    <string name="Search_Product">חיפוש פריט</string>
    <string name="Change_Product">ערוך פריט</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button">Button</string>
    <string name="title_activity_manage_worker">ManageWorkerActivity</string>
    <string name="instructions">לכניסה באמצעות טביעת אצבע</string>
    <string name="auth_success">הצלחת להתחבר!</string>
    <string name="aut_fail">הסריקה לא התבצעה כמו שצריך</string>
    <string name="btn_auth">לכניסה באמצעות טביעת אצבע</string>
    <string name="fingerprint_not_supported">בעיה בסריקה</string>
    <string name="no_fingerprint_configured">טביעת האצבע אינה במערכת</string>
    <string name="secure_lock_not_enabled">סרוק</string>


</resources>
