<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
        android:background="@color/colorLightGreen"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <Button
                    android:id="@+id/search_product"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Search_Product"
                    android:background="@drawable/button_round"
                    android:textSize="17dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/add_product_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_round"
                    android:text="@string/Add_Product"
                    android:textSize="17dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/add_worker_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Add_Worker"
                    android:textSize="17dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_round"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/reports_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_round"
                    android:text="@string/Reports"
                    android:textSize="17dp"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/inventory_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Inventory"
                    android:layout_gravity="center"
                    android:textSize="17dp"
                    android:background="@drawable/button_round"
                    android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>