<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:background="@color/colorBackgroundPink"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorActionBarPink"
            android:layout_marginBottom="15dp"
            app:titleTextColor="#fff"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="חיפוש פריט"
                android:textSize="22sp"
                android:layout_gravity="right"
                android:textColor="#D8FFFFFF"
                android:layout_marginRight="10dp"
                android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>
    <!-- Login progress -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:gravity="center_horizontal"
            android:background="@color/colorBackgroundPink"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".LoginActivity">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout android:id="@+id/relativeLayout1"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content">

                    <EditText
                            android:id="@+id/BarCode"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/Bar_code"
                            android:imeActionId="6"
                            android:gravity="right"

                            android:imeOptions="actionUnspecified"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:maxLines="1"
                            android:singleLine="true"/>



                    <Button android:text="סרוק"
                            android:id="@+id/Scanner"
                            android:textSize="17sp"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/green_btn_pressed"
                            android:textColor="#E9FFFFFF"
                            android:layout_alignParentLeft="true"
                            android:layout_height="40dp"
                            android:textStyle="bold"
                            android:layout_width="80dp">
                    </Button>
                </RelativeLayout>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/ProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Product_Name"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="right"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/Amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Amount"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="right"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/SalePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Sale_Price"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="right"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/DateChange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/DateChange"
                        android:textSize="20sp"
                        android:gravity="right"
                        android:singleLine="true"/>

                <TextView
                        android:id="@+id/WorkerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=":ת/שם העובד"
                        android:textSize="20sp"
                        android:gravity="right"
                        android:layout_marginTop="15dp"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/search_product_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/pink_btn_pressed"
                    android:textColor="#E9FFFFFF"
                    android:layout_gravity="center"
                    android:text="@string/Search_Product"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/Edit_product_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/pink_btn_pressed"
                    android:textColor="#E9FFFFFF"
                    android:text="@string/Change_Product"
                    android:textStyle="bold"/>/>



        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</LinearLayout>