<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:background="@color/colorLightGreen"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">




    <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="15dp"
            app:titleTextColor="#fff"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="התחברות"
                android:textSize="22dp"
                android:layout_gravity="right"
                android:textColor="#D8FFFFFF"
                android:layout_marginRight="10dp"
                android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/colorLightGreen"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".LoginActivity">
    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>



            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <Button
                    android:id="@+id/sign_in"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:background="@drawable/green_btn_pressed"
                    android:textSize="17dp"
                    android:layout_gravity="center"
                    android:textColor="#E9FFFFFF"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"

                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/Manager"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/green_btn_pressed"
                    android:text="@string/ManagerText"
                    android:textSize="18dp"
                    android:textColor="#E9FFFFFF"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/scan"
                    style="?android:textAppearanceSmall"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:background="@drawable/green_btn_pressed"
                    android:textSize="17dp"
                    android:layout_gravity="center"
                    android:textColor="#E9FFFFFF"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:text="@string/btn_auth" />

            <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"
                    android:layout_gravity="center" />

            <!--     <ImageView
                         android:id="@+id/imageView"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_gravity="center"
                         app:srcCompat="@drawable/ic_action_auth"
      />  -->


                 <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">

                     <TextView
                             android:id="@+id/ForgotPass"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/ForgotPass"
                             android:textSize="20sp"
                             android:gravity="center"

                             android:singleLine="true"/>

                 </android.support.design.widget.TextInputLayout>

             </LinearLayout>

         </ScrollView>
         </LinearLayout>
     </LinearLayout>